crates/xlate/tests/snapshots/golden_matrix__meta_logprobs__gpt-4o-mini__20260910__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Say the single word yes."
        }
      ]
    }
  ],
  "max_output_tokens": 16,
  "top_logprobs": 3
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
